--- a/SMS1/release_SMS1.json
+++ b/SMS1/release_SMS1.json
@@ -3,5 +3,5 @@
 	"version" : "2.2.1",
 	"url" : "https://raw.githubusercontent.com/ChampOnBon/Onvis/master/SMS1/release_SMS1.zip",
 	"url2" : "https://raw.githubusercontent.com/ChampOnBon/Onvis/master/SMS1/release_SMS1_mini.zip",
-	"description" : "This version has following function:  \n1.The real-time detection of door switch.\n2.Records of recent 100 times contact sensor operation.\n3.Save contact sensor history data from today to 31 days before.\n4.Detect percentage of the battery power in real-time."
+	"description" : ""
 }	
